fix viz-subtitle spacing

--- a/estilos/visualizaciones.css
+++ b/estilos/visualizaciones.css
@@ -47,11 +47,11 @@
   font-style: normal;
   font-weight: 600;
   font-size: 30px;
-  line-height: 1.2;
+  line-height: 1.4;
   letter-spacing: 0;
   color: #261729;
   background-color: #fff;
-  padding: 4px 24px;
+  padding: 8px 24px;
 }
 
 svg .tick text,
@@ -323,7 +323,8 @@ svg .tick line {
 
   .viz-subtitle {
     font-size: 16px;
-    padding: 4px 6px;
+    line-height: 1.2;
+    padding: 8px 6px;
   }
    
   .viz-text {
